fix: hide CTA button on small devices

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -248,6 +248,16 @@
 <---     Mobile Navigation      -->
 <--- -------------------------- -*/
 
+@media only screen and (max-width: 23rem) {
+  #cs-navigation {
+    .cs-container {
+      .cs-button-solid {
+        display: none;
+      }
+    }
+  }
+}
+
 /* Mobile - 1023px */
 @media only screen and (max-width: 63.9375rem) {
   body {
